--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,10 @@
 {
     "configurations": [
         {
-            "name": "Dart (example\\schedule_example.dart)",
+            "name": "Dart (example/schedule_example.dart)",
             "type": "dart",
             "request": "launch",
-            "program": "example\\schedule_example.dart"
+            "program": "example/schedule_example.dart"
         }
     ]
 }
